# serializer version: 1
# name: test_identity_export[admin]
  list([
    list([
      'first_name',
      'last_name',
      'localized_salutation',
      'localized_title',
      'language',
      'is_organisation',
      'organisation_name',
      'email',
      'additional_emails',
      'phone_numbers',
      'address_addition_1',
      'address_addition_2',
      'address_addition_3',
      'street_and_number',
      'po_box',
      'postcode',
      'town',
      'country',
    ]),
    list([
      'Caitlin',
      'Adams',
      '',
      '',
      'de',
      0,
      '',
      'ryanjohnson@example.net',
      '''
        portertodd@example.com
        sharonjohnson@example.org
        suzanne77@example.net
      ''',
      '''
        +41774226576
        +41311370448
        +41772344015
      ''',
      '',
      '',
      '',
      '7562 Navarro Summit Suite 837',
      '',
      '54786',
      'Tiffanyside',
      'Andorra',
    ]),
    list([
      'Craig',
      'Brady',
      'Monsieur',
      '',
      'fr',
      0,
      '',
      'qskinner@example.com',
      '''
        fjohnson@example.com
        stevenssamuel@example.net
        ydiaz@example.net
      ''',
      '''
        +41312929485
        +41317142073
        +41444486160
      ''',
      '',
      '',
      '',
      '21610 Liu Underpass',
      '',
      '14517',
      'Port Donald',
      'Taiwan',
    ]),
    list([
      'Christopher',
      'Brown',
      'Mrs.',
      '',
      'en',
      0,
      '',
      'jackellis@example.com',
      '''
        amy74@example.net
        bakerjesse@example.org
        ztran@example.com
      ''',
      '''
        +41412171090
        +41790516770
        +41798420328
      ''',
      '',
      '',
      '',
      '8185 Benjamin Ridge Suite 151',
      '',
      '35443',
      'Brownton',
      'Irak',
    ]),
    list([
      'Samantha',
      'Brown',
      '',
      '',
      'de',
      0,
      '',
      'carlcunningham@example.net',
      '''
        charles79@example.net
        johnstonalexis@example.org
        laurafrost@example.com
      ''',
      '''
        +41768080237
        +41441740467
        +41569353057
      ''',
      '',
      '',
      '',
      '8714 Thomas Parkways',
      '',
      '31593',
      'Victoriamouth',
      'Kuwait',
    ]),
    list([
      'Elizabeth',
      'Collins',
      '',
      '',
      'de',
      0,
      '',
      'bryantjessica@example.com',
      '''
        everettfernando@example.com
        glassdrew@example.org
        linda52@example.org
      ''',
      '''
        +41316164119
        +41440080179
        +41777230396
      ''',
      '',
      '',
      '',
      '17187 Hernandez Fall',
      '',
      '64195',
      'South Mariahside',
      'Bulgarien',
    ]),
    list([
      'Cameron',
      'Howard',
      '',
      '',
      'de',
      0,
      '',
      'calebsoto@example.net',
      '''
        cohenthomas@example.org
        fostersusan@example.net
        robertferguson@example.com
      ''',
      '''
        +41417090372
        +41417372016
        +41441953915
      ''',
      '',
      '',
      '',
      '7980 Kyle Vista Apt. 991',
      '',
      '68698',
      'Jonesshire',
      'Antigua und Barbuda',
    ]),
    list([
      'Jared',
      'Hunter',
      '',
      '',
      'de',
      0,
      '',
      'jenniferwilliams@example.org',
      '''
        amy27@example.net
        evanskimberly@example.net
        smithaaron@example.com
      ''',
      '''
        +41778338833
        +41568398644
        +41794151762
      ''',
      '',
      '',
      '',
      '36714 Ellis Meadows Suite 555',
      '',
      '56706',
      'Tiffanyview',
      'Gambia',
    ]),
    list([
      'Carolyn',
      'Stephens',
      '',
      '',
      'de',
      0,
      '',
      'khayes@example.org',
      '''
        chapmanjonathan@example.com
        harriscynthia@example.com
        smithpatrick@example.com
      ''',
      '''
        +41761631936
        +41441652479
        +41774821908
      ''',
      '',
      '',
      '',
      '8402 Alexander Cove',
      '',
      '32866',
      'New Charlottestad',
      'Zypern',
    ]),
    list([
      'Cynthia',
      'Ware',
      '',
      '',
      'de',
      0,
      '',
      'jonathan94@example.org',
      '''
        gmartinez@example.com
        watsontravis@example.org
        xbrandt@example.org
      ''',
      '''
        +41313311645
        +41782813895
        +41783574710
      ''',
      '',
      '',
      '',
      '5440 Booth Knoll Apt. 817',
      '',
      '97693',
      'Aprilbury',
      'Kongo',
    ]),
    list([
      'Hector',
      'Wilson',
      '',
      '',
      'de',
      1,
      'Bryan and Sons',
      'lhernandez@example.net',
      '',
      '',
      '',
      '',
      '',
      '',
      '',
      '',
      '',
      '',
    ]),
    list([
      'Thomas',
      'Woods',
      '',
      '',
      'de',
      0,
      '',
      'tanya60@example.net',
      '''
        ihardy@example.com
        qstewart@example.com
        stokesmichael@example.net
      ''',
      '''
        +41316245787
        +41318252219
        +41792181419
      ''',
      '',
      '',
      '',
      '720 Scott Square',
      '',
      '35967',
      'Robertfurt',
      'Dominikanische Republik',
    ]),
  ])
# ---
# name: test_identity_export_labels_context[admin]
  dict({
    'identities': list([
      list([
        OrderedDict({
          'localized_title': '',
          'first_name': 'Caitlin',
          'last_name': 'Adams',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '3129 Autumn Roads',
          'po_box': '',
          'postcode': '69035',
          'town': 'Karamouth',
          'country': 'Dominica',
        }),
        OrderedDict({
          'localized_title': '',
          'first_name': 'Craig',
          'last_name': 'Brady',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '492 Theresa Islands Apt. 327',
          'po_box': '',
          'postcode': '25734',
          'town': 'New Sherrifurt',
          'country': 'China',
        }),
      ]),
      list([
        OrderedDict({
          'localized_title': '',
          'first_name': 'Christopher',
          'last_name': 'Brown',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '202 Lori Station Apt. 776',
          'po_box': '',
          'postcode': '74278',
          'town': 'Karenview',
          'country': 'Peru',
        }),
        OrderedDict({
          'localized_title': '',
          'first_name': 'Samantha',
          'last_name': 'Brown',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '00390 Massey Center',
          'po_box': '',
          'postcode': '87711',
          'town': 'Michaelland',
          'country': 'Belize',
        }),
      ]),
      list([
        OrderedDict({
          'localized_title': '',
          'first_name': 'Elizabeth',
          'last_name': 'Collins',
          'organisation_name': 'SAGW',
          'address_addition_1': 'Haus der Akademien',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '92828 Martin Meadow Suite 942',
          'po_box': '23',
          'postcode': '09424',
          'town': 'Taylorshire',
          'country': 'Bahrain',
        }),
        OrderedDict({
          'localized_title': '',
          'first_name': 'Cameron',
          'last_name': 'Howard',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '0356 Arroyo Isle Suite 694',
          'po_box': '',
          'postcode': '56598',
          'town': 'North Sandraville',
          'country': 'Schweiz',
        }),
      ]),
      list([
        OrderedDict({
          'localized_title': '',
          'first_name': 'Jared',
          'last_name': 'Hunter',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '70906 Ryan Crossing Apt. 052',
          'po_box': '',
          'postcode': '66800',
          'town': 'West Darylfort',
          'country': 'Papua Neu Guinea',
        }),
        OrderedDict({
          'localized_title': '',
          'first_name': 'Susan',
          'last_name': 'Park',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '09693 Buchanan Pines Apt. 875',
          'po_box': '',
          'postcode': '87372',
          'town': 'East Andrew',
          'country': 'Israel',
        }),
      ]),
      list([
        OrderedDict({
          'localized_title': '',
          'first_name': 'Carolyn',
          'last_name': 'Stephens',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '589 Patricia Club',
          'po_box': '',
          'postcode': '42361',
          'town': 'New Dale',
          'country': 'Ruanda',
        }),
        OrderedDict({
          'localized_title': '',
          'first_name': 'Cynthia',
          'last_name': 'Ware',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '2841 Levi Throughway',
          'po_box': '',
          'postcode': '72713',
          'town': 'South Amanda',
          'country': 'Mozambique',
        }),
      ]),
      list([
        OrderedDict({
          'localized_title': '',
          'first_name': 'Thomas',
          'last_name': 'Woods',
          'organisation_name': '',
          'address_addition_1': '',
          'address_addition_2': '',
          'address_addition_3': '',
          'street_and_number': '99841 Quinn Common',
          'po_box': '',
          'postcode': '35443',
          'town': 'Brownton',
          'country': 'Irak',
        }),
        dict({
        }),
      ]),
    ]),
  })
# ---
# name: test_identity_organisation_multi_filter_distinct[admin]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'comment': None,
          'created-by-user': None,
          'email': 'qskinner@example.com',
          'first-name': 'Craig',
          'has-members': False,
          'has-memberships': True,
          'idp-id': '0fa3973e-2e9f-46ee-8268-566caa517a08',
          'is-advisory-board': False,
          'is-expert-association': False,
          'is-organisation': False,
          'language': 'de',
          'last-name': 'Brady',
          'modified-by-user': None,
          'organisation-name': None,
          'salutation': 'neutral',
          'title': 'none',
        }),
        'relationships': dict({
          'additional-emails': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
          'addresses': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
          'interests': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
          'phone-numbers': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'identities',
      }),
      dict({
        'attributes': dict({
          'comment': None,
          'created-by-user': None,
          'email': 'bryantjessica@example.com',
          'first-name': 'Elizabeth',
          'has-members': False,
          'has-memberships': True,
          'idp-id': 'c90bbca9-79ec-4684-93e2-6930c1f27a6a',
          'is-advisory-board': False,
          'is-expert-association': False,
          'is-organisation': False,
          'language': 'de',
          'last-name': 'Collins',
          'modified-by-user': None,
          'organisation-name': None,
          'salutation': 'neutral',
          'title': 'none',
        }),
        'relationships': dict({
          'additional-emails': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
          'addresses': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
          'interests': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
          'phone-numbers': dict({
            'data': list([
            ]),
            'meta': dict({
              'count': 0,
            }),
          }),
        }),
        'type': 'identities',
      }),
    ]),
  })
# ---
# name: test_membership_export[admin]
  list([
    list([
      'first_name',
      'last_name',
      'localized_salutation',
      'localized_title',
      'language',
      'email',
      'address_addition_1',
      'address_addition_2',
      'address_addition_3',
      'street_and_number',
      'po_box',
      'postcode',
      'town',
      'country',
      'organisation',
      'role',
      'inactive',
      'tenure',
      'next_election',
    ]),
    list([
      'Thomas',
      'Woods',
      '',
      '',
      'de',
      'tanya60@example.net',
      '',
      '',
      '',
      '5440 Booth Knoll Apt. 817',
      '',
      '97693',
      'Aprilbury',
      'Kongo',
      'Nonsafe',
      'Binnenschiffer',
      0,
      '',
      '',
    ]),
    list([
      'Samantha',
      'Brown',
      '',
      '',
      'de',
      'carlcunningham@example.net',
      '',
      '',
      '',
      '8714 Thomas Parkways',
      '',
      '31593',
      'Victoriamouth',
      'Kuwait',
      'Allsafe',
      'Mechaniker',
      0,
      '',
      '',
    ]),
    list([
      'Jared',
      'Hunter',
      '',
      '',
      'de',
      'jenniferwilliams@example.org',
      '',
      '',
      '',
      '36714 Ellis Meadows Suite 555',
      '',
      '56706',
      'Tiffanyview',
      'Gambia',
      'Nonsafe',
      'Designer',
      0,
      '',
      '',
    ]),
    list([
      'Elizabeth',
      'Collins',
      '',
      '',
      'de',
      'bryantjessica@example.com',
      '',
      '',
      '',
      '17187 Hernandez Fall',
      '',
      '64195',
      'South Mariahside',
      'Bulgarien',
      'Allsafe',
      '',
      0,
      '2020-01-01 - 2020-01-02',
      '2020-11-23',
    ]),
    list([
      'Cynthia',
      'Ware',
      '',
      '',
      'de',
      'jonathan94@example.org',
      '',
      '',
      '',
      '8402 Alexander Cove',
      '',
      '32866',
      'New Charlottestad',
      'Zypern',
      'Nonsafe',
      'Arzt',
      0,
      '',
      '',
    ]),
    list([
      'Cameron',
      'Howard',
      '',
      '',
      'de',
      'calebsoto@example.net',
      '',
      '',
      '',
      '7980 Kyle Vista Apt. 991',
      '',
      '68698',
      'Jonesshire',
      'Antigua und Barbuda',
      'Allsafe',
      'Designer',
      1,
      '2020-01-01 - ',
      '',
    ]),
  ])
# ---
